Added descritpion of notebook at th etop

--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -10,10 +10,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81c79c76",
+   "metadata": {},
+   "source": [
+    "This notebook builds a tool for parameter exploration for the processes involved in electron degradation. The processes are:\n",
+    "\n",
+    "- **Plasma losses:** Coulomb interactions with free thermal electrons.\n",
+    "    - Huba2013 (in the limit with the $\\beta$-particle energy far exceeds that of the electrons).\n",
+    "- **Bremsstrahlung**:\n",
+    "    - Barnes&Kasen2016 (corrected):  Includes tabulated cross-sections from Seltzer&Berger for various compositions. Typo corrected: $r_0$ replaced by $r_e$. Includes screening at low energies.\n",
+    "    - Bethe1934: Does not include screening at low energies.\n",
+    "- **Ionization/Excitation**:\n",
+    "    - Barnes&Kasen2016: includes excitation and ionization for averaged comopsition (one set of values for $A$ and $Z$).\n",
+    "    - Bethe formulation (from Kasen&Barnes2019): non-relativistic. Only includes ionization.\n",
+    "- **Synchrotron**\n",
+    "    - Barnes&Kasen2016: total synchrotron radiated energy for a single electron."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4dc6b636",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Exploring the different contributions to the energy loss rate for accelerated electrons."
    ]
@@ -21,9 +38,7 @@
   {
    "cell_type": "markdown",
    "id": "1a949b46",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We start with a bunch of constants and utility functions:"
    ]
@@ -32,9 +47,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "802f7e15",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -94,8 +107,7 @@
    "cell_type": "markdown",
    "id": "9919b5bc",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "#### Plasma losses\n",
@@ -148,8 +160,7 @@
    "cell_type": "markdown",
    "id": "b6f29e9f",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "#### IE losses\n",
@@ -202,8 +213,8 @@
     "    return(to_MeV(Edot_IE))\n",
     "\n",
     "def IE_Bethe(E_beta, I_bar, v_beta, n_eb, chi=1, get_name=False):\n",
-    "    '''Returns beta_particle losses due to ionization and excitation\n",
-    "    of atomic electrons (MeV/s).\n",
+    "    '''Returns beta_particle losses due to ionization\n",
+    "    of atomic electrons (MeV/s). Does not include excitation.\n",
     "    From the Bethe formula as reported in Kasen&Barnes2019 eq. 5.\n",
     "    args:\n",
     "    E_beta = beta-particle kinetic energy (MeV)\n",
@@ -228,8 +239,7 @@
    "cell_type": "markdown",
    "id": "08129e93",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "#### Synchrotron losses\n",
@@ -259,10 +269,7 @@
   {
    "cell_type": "markdown",
    "id": "375c6f4f",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Bremsstrahlung\n",
     "This is tricky! Strongly depends on the composition. Assumptions have to be made on the average atomic number of the ejecta, which will also vary depending on whether you are in the inner or outer ejecta. Cross-sections have been tabulated by **Seltzer&Berger1986**."
@@ -272,9 +279,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c4d84527",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def phirad(E_beta, Z):\n",
@@ -416,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "id": "da1d4ca1",
    "metadata": {
     "hidden": true
@@ -450,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "id": "a060744d",
    "metadata": {
     "hidden": true
@@ -473,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "id": "d0738858",
    "metadata": {
     "hidden": true
@@ -509,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "id": "1365a0be",
    "metadata": {
     "hidden": true
@@ -550,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "id": "0cacf8f3",
    "metadata": {
     "hidden": true
@@ -559,7 +564,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e59dfdd54d11406c853e10923092cc1f",
+       "model_id": "0c6d60fe3d874cf3a0fd151e7207c8fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -588,7 +593,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e07f6b26af814d28822a4f398999d3c5",
+       "model_id": "c22464cc561f4e93bae050b7d8d91ebc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -626,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "id": "d23eedd5",
    "metadata": {
     "hidden": true
@@ -635,7 +640,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db93a251d6994e408a91f20354e9a703",
+       "model_id": "f3d2153f9846464aa07e1eb9f6b46e2e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -745,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 13,
    "id": "c683a9a7",
    "metadata": {},
    "outputs": [],
@@ -764,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 14,
    "id": "480a4fc3",
    "metadata": {},
    "outputs": [],
@@ -777,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 15,
    "id": "1165cacb",
    "metadata": {},
    "outputs": [],
@@ -832,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 16,
    "id": "3bfe05a6",
    "metadata": {},
    "outputs": [],
@@ -909,14 +914,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 17,
    "id": "e86cbe9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3652c1c9c658403ab3b009831bc2fa5b",
+       "model_id": "a75b5cd710a34eca9e5b0e96400d76dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -941,6 +946,12 @@
     "f = widgets.VBox([compo_ui, params_ui, ui])\n",
     "display(f)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59a48264",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
