--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81c79c76",
+   "id": "2d71737d",
    "metadata": {},
    "source": [
     "This notebook builds a tool for parameter exploration for the processes involved in electron degradation. The processes are:\n",
@@ -30,7 +30,9 @@
   {
    "cell_type": "markdown",
    "id": "4dc6b636",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Exploring the different contributions to the energy loss rate for accelerated electrons."
    ]
@@ -38,7 +40,9 @@
   {
    "cell_type": "markdown",
    "id": "1a949b46",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We start with a bunch of constants and utility functions:"
    ]
@@ -47,7 +51,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "802f7e15",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -107,7 +113,8 @@
    "cell_type": "markdown",
    "id": "9919b5bc",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Plasma losses\n",
@@ -160,7 +167,8 @@
    "cell_type": "markdown",
    "id": "b6f29e9f",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### IE losses\n",
@@ -239,7 +247,8 @@
    "cell_type": "markdown",
    "id": "08129e93",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Synchrotron losses\n",
@@ -269,7 +278,9 @@
   {
    "cell_type": "markdown",
    "id": "375c6f4f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Bremsstrahlung\n",
     "This is tricky! Strongly depends on the composition. Assumptions have to be made on the average atomic number of the ejecta, which will also vary depending on whether you are in the inner or outer ejecta. Cross-sections have been tabulated by **Seltzer&Berger1986**."
@@ -279,7 +290,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c4d84527",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def phirad(E_beta, Z):\n",
@@ -762,7 +775,9 @@
   {
    "cell_type": "markdown",
    "id": "85cf9ed2",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Functions used for visualisation"
    ]
@@ -771,7 +786,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "480a4fc3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -784,7 +801,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "1165cacb",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "Ts = np.logspace(-6, 0, 30)\n",
@@ -839,7 +858,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "3bfe05a6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "Tpe = widgets.Select(description='Ejecta type', \n",
@@ -913,6 +934,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c906a6e",
+   "metadata": {},
+   "source": [
+    "### Comments\n",
+    "\n",
+    "- All the processes are expressed per unit density. So they don't evolve as when changing density, except for synchrotron as the energy loss is independent of the density.\n",
+    "\n",
+    "\n",
+    "- Changing temperature only influences the lower threshold in energy for plasma losses. Increasing temperature increases the energy threshold below which electrons cannot loose their energy (they can't communicate their energy to the thermal electrons.)\n",
+    "\n",
+    "\n",
+    "- Bethe IE losses don't include the relativistic correction that increases the losses at high energies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "e86cbe9f",
@@ -949,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a48264",
+   "id": "a07379e9",
    "metadata": {},
    "source": []
   },
