--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -30,9 +30,7 @@
   {
    "cell_type": "markdown",
    "id": "4dc6b636",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Exploring the different contributions to the energy loss rate for accelerated electrons."
    ]
@@ -40,9 +38,7 @@
   {
    "cell_type": "markdown",
    "id": "1a949b46",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We start with a bunch of constants and utility functions:"
    ]
@@ -51,9 +47,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "802f7e15",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -113,8 +107,7 @@
    "cell_type": "markdown",
    "id": "9919b5bc",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "#### Plasma losses\n",
@@ -166,10 +159,7 @@
   {
    "cell_type": "markdown",
    "id": "b6f29e9f",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### IE losses\n",
     "When $\\beta$-particles are exciting or inizing bound atomic electrons.\n",
@@ -181,9 +171,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f1c1b1b9",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def calc_n_eb(rho, z_over_a):\n",
@@ -247,8 +235,7 @@
    "cell_type": "markdown",
    "id": "08129e93",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "#### Synchrotron losses\n",
@@ -278,9 +265,7 @@
   {
    "cell_type": "markdown",
    "id": "375c6f4f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Bremsstrahlung\n",
     "This is tricky! Strongly depends on the composition. Assumptions have to be made on the average atomic number of the ejecta, which will also vary depending on whether you are in the inner or outer ejecta. Cross-sections have been tabulated by **Seltzer&Berger1986**."
@@ -290,9 +275,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c4d84527",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def phirad(E_beta, Z):\n",
@@ -418,27 +401,29 @@
   {
    "cell_type": "markdown",
    "id": "3d974e93",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Plotting loss rates for typical values\n",
     "\n",
+    "#### Supernova\n",
     "Ejecta mass: $M_\\mathrm{ej} = 10^{-3} M_\\odot$ \\\n",
     "Ejecta velocity: $v_\\mathrm{ej} = 0.2c$\n",
     "\n",
     "We look at $t=1$day.\n",
     "\n",
-    "Ejecta density = $M_\\mathrm{ej} / \\frac{4}{3} \\pi (v_\\mathrm{ej}t)^3 = 1.7 \\times 10^{14}$ g.cm$^{-2}$\n"
+    "Ejecta density = $M_\\mathrm{ej} / \\frac{4}{3} \\pi (v_\\mathrm{ej}t)^3 = 1.7 \\times 10^{14}$ g.cm$^{-2}$\n",
+    "\n",
+    "#### GRB\n",
+    "Ejecta density: $n \\sim 100$ directly downstream of the shock (from GAMMA simulations).\n",
+    "\n",
+    "Temperature (from GAMMA simulations, pe- plasma): $k_BT = P/(2n)$ => $10^8 \\mathrm{K} - 10^{11} \\mathrm{K}$\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "id": "da1d4ca1",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -459,9 +444,7 @@
   {
    "cell_type": "markdown",
    "id": "1c6d78ac",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "For a given mass density and mass number A, we can compute the number density of scattering species for Bremsstrahlung:"
    ]
@@ -470,9 +453,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "a060744d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "A = 144 # inner ejecta\n",
@@ -482,9 +463,7 @@
   {
    "cell_type": "markdown",
    "id": "bef3be57",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can now compute the contributions from plasma, IE and Bremsstrahlung losses. We start by setting up the KN parameters"
    ]
@@ -493,9 +472,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "d0738858",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "E_beta = np.logspace(-3, 4, 100) # particle kinetic energy (MeV)\n",
@@ -518,9 +495,7 @@
   {
    "cell_type": "markdown",
    "id": "fb7f0e22",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "This is the plotting function"
    ]
@@ -529,9 +504,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "1365a0be",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_rates(T, rho, B, Z, Z_charge, A, Brem=[Brem_Barnes], IE=[IE_Barnes]):\n",
@@ -570,14 +543,12 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "0cacf8f3",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c6d60fe3d874cf3a0fd151e7207c8fd",
+       "model_id": "dc45d5bfaf6e442db6d3ee1cd123ca8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -599,14 +570,12 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "e53c22bf",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c22464cc561f4e93bae050b7d8d91ebc",
+       "model_id": "b620d48b57e340f3ba812c9757dcd63a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -629,9 +598,7 @@
   {
    "cell_type": "markdown",
    "id": "94243e84",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Parameter exploration\n",
     "\n",
@@ -644,16 +611,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "d23eedd5",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3d2153f9846464aa07e1eb9f6b46e2e",
+       "model_id": "26c4819f26864b9c8c75d91c0fa64176",
        "version_major": 2,
        "version_minor": 0
       },
@@ -679,7 +644,7 @@
     "                              options=['Barnes (Corrected)', 'Bethe_SI'],\n",
     "                              value=['Barnes (Corrected)'])\n",
     "\n",
-    "T = widgets.FloatLogSlider(description='T', min=-10, max=0, value=1.e-6, step=1)\n",
+    "T = widgets.FloatLogSlider(description='T', min=-10, max=10, value=1.e-6, step=1)\n",
     "rho = widgets.FloatLogSlider(description='rho', min=-18, max=-10, value=1.e-14, step=1)\n",
     "B = widgets.FloatLogSlider(description='B', min=-10, max=5, value=1.e-6, step=1)\n",
     "Z = widgets.Dropdown(description='Z', options=[1,60], value=60)\n",
@@ -718,9 +683,7 @@
   {
    "cell_type": "markdown",
    "id": "4a68b15d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Now we need to evolve this following Meztger review for temperature and density."
    ]
@@ -728,9 +691,7 @@
   {
    "cell_type": "markdown",
    "id": "5814cf2e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "A: Goes into homologuous expansion: $\\rho \\propto t^{-3}$. Quentin's work suggests that T might be increasing. In some models. T might go up to $10^{5}K$, but probably not above. "
    ]
@@ -738,9 +699,7 @@
   {
    "cell_type": "markdown",
    "id": "835cba68",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "hello"
    ]
@@ -763,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "c683a9a7",
    "metadata": {},
    "outputs": [],
@@ -775,20 +734,16 @@
   {
    "cell_type": "markdown",
    "id": "85cf9ed2",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Functions used for visualisation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "480a4fc3",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -799,11 +754,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "1165cacb",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Ts = np.logspace(-6, 0, 30)\n",
@@ -856,15 +809,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "3bfe05a6",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Tpe = widgets.Select(description='Ejecta type', \n",
-    "                     options=['Hydrogen', 'Inner ejecta'], \n",
+    "                     options=['Hydrogen', 'Inner ejecta', 'GRB afterglow'], \n",
     "                     value='Inner ejecta')\n",
     "IE = widgets.SelectMultiple(description='IE_losses',\n",
     "                            options=['Barnes', 'Bethe (non-rel)'],\n",
@@ -874,7 +825,7 @@
     "                              value=['Barnes (Corrected)'])\n",
     "\n",
     "E_beta_eval = widgets.FloatLogSlider(description='E_beta', min=-3, max=3, value=0, step=1)\n",
-    "T = widgets.FloatLogSlider(description='T', min=-10, max=0, value=1.e-6, step=1)\n",
+    "T = widgets.FloatLogSlider(description='T', min=-10, max=10, value=1.e-6, step=1)\n",
     "rho = widgets.FloatLogSlider(description='rho', min=-18, max=-10, value=1.e-14, step=1)\n",
     "B = widgets.FloatLogSlider(description='B', min=-10, max=5, value=1.e-6, step=1)\n",
     "Z = widgets.Dropdown(description='Z', options=[1,60], value=60)\n",
@@ -886,12 +837,18 @@
     "    if Tpe.value == 'Hydrogen':\n",
     "        Z.value = 1\n",
     "        A.value = 1\n",
+    "        T.value = 1.e-6\n",
     "    if Tpe.value == 'Inner ejecta':\n",
     "        Z.value = 60\n",
     "        A.value = 144\n",
+    "        T.value = 1.e-6\n",
     "    if Tpe.value == 'Outer':\n",
     "        Z.value = 55\n",
     "        A.value = 133\n",
+    "    if Tpe.value == 'GRB afterglow':\n",
+    "        Z.value = 1\n",
+    "        A.value = 1\n",
+    "        T.value = 1.e9\n",
     "Tpe.observe(update_Z_A, 'value')\n",
     "\n",
     "def update(Tpe, T, rho, B, Z, A, Brem, IE):\n",
@@ -951,19 +908,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "e86cbe9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a75b5cd710a34eca9e5b0e96400d76dc",
+       "model_id": "f200e2b4cbca46f6b14987165166f695",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Select(description='Ejecta type', index=1, options=('Hydrogen', 'Inner ejecta'),…"
+       "VBox(children=(HBox(children=(Select(description='Ejecta type', index=1, options=('Hydrogen', 'Inner ejecta', …"
       ]
      },
      "metadata": {},
