Added Magnetic fields to GRB perams

--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -30,7 +30,9 @@
   {
    "cell_type": "markdown",
    "id": "4dc6b636",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Exploring the different contributions to the energy loss rate for accelerated electrons."
    ]
@@ -38,7 +40,9 @@
   {
    "cell_type": "markdown",
    "id": "1a949b46",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We start with a bunch of constants and utility functions:"
    ]
@@ -47,7 +51,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "802f7e15",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -107,7 +113,8 @@
    "cell_type": "markdown",
    "id": "9919b5bc",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Plasma losses\n",
@@ -159,7 +166,9 @@
   {
    "cell_type": "markdown",
    "id": "b6f29e9f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### IE losses\n",
     "When $\\beta$-particles are exciting or inizing bound atomic electrons.\n",
@@ -171,7 +180,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f1c1b1b9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def calc_n_eb(rho, z_over_a):\n",
@@ -235,7 +246,8 @@
    "cell_type": "markdown",
    "id": "08129e93",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Synchrotron losses\n",
@@ -265,7 +277,9 @@
   {
    "cell_type": "markdown",
    "id": "375c6f4f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Bremsstrahlung\n",
     "This is tricky! Strongly depends on the composition. Assumptions have to be made on the average atomic number of the ejecta, which will also vary depending on whether you are in the inner or outer ejecta. Cross-sections have been tabulated by **Seltzer&Berger1986**."
@@ -275,7 +289,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c4d84527",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def phirad(E_beta, Z):\n",
@@ -403,7 +419,7 @@
    "id": "3d974e93",
    "metadata": {},
    "source": [
-    "### Plotting loss rates for typical values\n",
+    "### Typical values\n",
     "\n",
     "#### Supernova\n",
     "Ejecta mass: $M_\\mathrm{ej} = 10^{-3} M_\\odot$ \\\n",
@@ -416,12 +432,14 @@
     "#### GRB\n",
     "Ejecta density: $n \\sim 100$ directly downstream of the shock (from GAMMA simulations).\n",
     "\n",
-    "Temperature (from GAMMA simulations, pe- plasma): $k_BT = P/(2n)$ => $10^8 \\mathrm{K} - 10^{11} \\mathrm{K}$\n"
+    "Temperature (from GAMMA simulations, pe- plasma): $k_BT = P/(2n)$ => $10^8 \\mathrm{K} - 10^{11} \\mathrm{K}$\n",
+    "\n",
+    "Magnetic field (from GAMMA simulations): $B = \\sqrt{8\\pi E_B}$ => $\\sim 10^3 \\mathrm{G} = 10^{-1} \\mathrm{T}$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
@@ -495,16 +513,20 @@
   {
    "cell_type": "markdown",
    "id": "fb7f0e22",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "This is the plotting function"
+    "### Plotting function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "id": "1365a0be",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def plot_rates(T, rho, B, Z, Z_charge, A, Brem=[Brem_Barnes], IE=[IE_Barnes]):\n",
@@ -543,7 +565,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "0cacf8f3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -570,7 +594,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "e53c22bf",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -598,7 +624,9 @@
   {
    "cell_type": "markdown",
    "id": "94243e84",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Parameter exploration\n",
     "\n",
@@ -613,7 +641,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "d23eedd5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -683,7 +713,9 @@
   {
    "cell_type": "markdown",
    "id": "4a68b15d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Now we need to evolve this following Meztger review for temperature and density."
    ]
@@ -691,7 +723,9 @@
   {
    "cell_type": "markdown",
    "id": "5814cf2e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "A: Goes into homologuous expansion: $\\rho \\propto t^{-3}$. Quentin's work suggests that T might be increasing. In some models. T might go up to $10^{5}K$, but probably not above. "
    ]
@@ -699,7 +733,9 @@
   {
    "cell_type": "markdown",
    "id": "835cba68",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "hello"
    ]
@@ -809,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "3bfe05a6",
    "metadata": {},
    "outputs": [],
@@ -838,10 +874,12 @@
     "        Z.value = 1\n",
     "        A.value = 1\n",
     "        T.value = 1.e-6\n",
+    "        B.valiue = 3.7e-6\n",
     "    if Tpe.value == 'Inner ejecta':\n",
     "        Z.value = 60\n",
     "        A.value = 144\n",
     "        T.value = 1.e-6\n",
+    "        B.value = 3.7e-6\n",
     "    if Tpe.value == 'Outer':\n",
     "        Z.value = 55\n",
     "        A.value = 133\n",
@@ -849,6 +887,7 @@
     "        Z.value = 1\n",
     "        A.value = 1\n",
     "        T.value = 1.e9\n",
+    "        B.value = 1.e-1  # in Tesla (1 T = 10^4 G)\n",
     "Tpe.observe(update_Z_A, 'value')\n",
     "\n",
     "def update(Tpe, T, rho, B, Z, A, Brem, IE):\n",
@@ -887,7 +926,8 @@
     "\n",
     "The heatmap shows how much each process (<font color='red'>plasma</font>, <font color='green'>IE</font>, <font color='blue'>bremsstrahlung</font>, **synchrotron**) dominates over the others for the value of `E_beta` chosen with the cursor.\n",
     "\n",
-    "- Hovering over the heatmap will update the figure showing the degradation processes as a function of kinetic energy."
+    "- Hovering over the heatmap will update the figure showing the degradation processes as a function of kinetic energy.\n",
+    "- All parameters are in SI units"
    ]
   },
   {
@@ -908,14 +948,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "e86cbe9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f200e2b4cbca46f6b14987165166f695",
+       "model_id": "045482b57e0a4dd183168f950be0d1c1",
        "version_major": 2,
        "version_minor": 0
       },
