--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -18,7 +18,7 @@
     "- **Plasma losses:** Coulomb interactions with free thermal electrons.\n",
     "    - Huba2013 (in the limit with the $\\beta$-particle energy far exceeds that of the electrons).\n",
     "- **Bremsstrahlung**:\n",
-    "    - Barnes&Kasen2016 (corrected):  Includes tabulated cross-sections from Seltzer&Berger for various compositions. Typo corrected: $r_0$ replaced by $r_e$. Includes screening at low energies.\n",
+    "    - Barnes&Kasen2016 (corrected):  Includes tabulated cross-sections from Seltzer&Berger for various compositions. Typo corrected: eq.13 $r_0$ is incorrect and replaced by $r_e$. Includes screening at low energies.\n",
     "    - Bethe1934: Does not include screening at low energies.\n",
     "- **Ionization/Excitation**:\n",
     "    - Barnes&Kasen2016: includes excitation and ionization for averaged comopsition (one set of values for $A$ and $Z$).\n",
@@ -30,9 +30,7 @@
   {
    "cell_type": "markdown",
    "id": "4dc6b636",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Exploring the different contributions to the energy loss rate for accelerated electrons."
    ]
@@ -40,9 +38,7 @@
   {
    "cell_type": "markdown",
    "id": "1a949b46",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We start with a bunch of constants and utility functions:"
    ]
@@ -51,9 +47,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "802f7e15",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -112,22 +106,20 @@
   {
    "cell_type": "markdown",
    "id": "9919b5bc",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Plasma losses\n",
-    "Coulomb interactions with free thermal electrons. In the limit that the $\\beta$-particle energy far exceeds that of thermal electrons, **Huba2013** gives:"
+    "Coulomb interactions with free thermal electrons. In the limit that the $\\beta$-particle energy far exceeds that of thermal electrons, **Huba2013** gives:\n",
+    "\n",
+    "$\\dot{E}^\\mathrm{pl}_\\beta = 7.7 \\times 10^{-15} E_\\beta^{-1/2} \\times \\left(\\frac{n_e}{1 \\mathrm{cm}^{-3}} \\right)\n",
+    "\\lambda_{ee} \\left( 1.0 - \\frac{3.9}{7.7} \\frac{T}{E_\\beta} \\right) \\mathrm{MeV~s}^{-1}$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "id": "a9b43ac5",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plasma_losses(E_beta, n_e, T):\n",
@@ -148,9 +140,7 @@
   {
    "cell_type": "markdown",
    "id": "0e577b44",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "This assumes that the dominating interactions are electron/electron (ignoring electron/ion interactions). This depends on the density of free thermal electrons, and thus the composition of the medium. It is not clear in Barnes&Kasen2016 whether they assume that all free thermal electrons only come from atoms heavier than hydrogen.\n",
     "\n",
@@ -166,23 +156,31 @@
   {
    "cell_type": "markdown",
    "id": "b6f29e9f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### IE losses\n",
-    "When $\\beta$-particles are exciting or inizing bound atomic electrons.\n",
+    "When $\\beta$-particles are exciting or ionizing bound atomic electrons.\n",
     "\n",
-    "We expect Barnes and Bethe to agree at high energies because Ionization starts dominating, and Bethe does not include a proper description of Excitation only. This ignores relativistic corrections however, which could explain the discrepancy at high energies."
+    "We expect Barnes and Bethe to agree at high energies because Ionization starts dominating, and Bethe does not include a proper description of Excitation only. This ignores relativistic corrections however, which could explain the discrepancy at high energies.\n",
+    "\n",
+    "*Barnes:*\n",
+    "\n",
+    "$\\dot{E}_\\beta^\\mathrm{IE} = \n",
+    "\\frac{2\\pi r_e^2 m_e c^3 n_\\mathrm{e,b}}{v_\\beta/c} \n",
+    "\\times [ 2\\ln(E_\\beta/\\bar{I}) + \\ln(1+\\tau/2) + (1+v_\\beta^2/c^2)g(\\tau)]$\n",
+    "\n",
+    "$g(\\tau) = 1+ \\frac{\\tau^2}{8} - (2\\tau+1)\\ln2$\n",
+    "\n",
+    "*Comments:*\n",
+    "- Dependency on composition comes through $\\bar{I}$ (Average Ionization and Excitation potential).\n",
+    "- Tau is a measure of the particle kinetic energy normalised by rest-mass energy."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "f1c1b1b9",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def calc_n_eb(rho, z_over_a):\n",
@@ -245,22 +243,19 @@
   {
    "cell_type": "markdown",
    "id": "08129e93",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Synchrotron losses\n",
-    "This is strongly dependent on the magnetic field. This is negligible in the kilonova for the expected magnetic field values of 3.6e-6G at 1 day (extracted from eq. 12, Barnes&Kasen2016)"
+    "This is strongly dependent on the magnetic field. This is negligible in the kilonova for the expected magnetic field values of 3.6e-6G at 1 day (extracted from eq. 12, Barnes&Kasen2016)\n",
+    "\n",
+    "$\\dot{E}_\\beta^\\mathrm{syn} = \\frac{4}{9} r_e$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "id": "71f052d1",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def synch_losses(v_beta, B):\n",
@@ -277,9 +272,7 @@
   {
    "cell_type": "markdown",
    "id": "375c6f4f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Bremsstrahlung\n",
     "This is tricky! Strongly depends on the composition. Assumptions have to be made on the average atomic number of the ejecta, which will also vary depending on whether you are in the inner or outer ejecta. Cross-sections have been tabulated by **Seltzer&Berger1986**."
@@ -289,9 +282,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c4d84527",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def phirad(E_beta, Z):\n",
@@ -352,7 +343,7 @@
     "    E_dot = (n_i * v_beta * (to_erg(E_beta) + m_e_*c_**2)\n",
     "             * Z**2 * r_e_**2 * alpha_ * phirad(E_beta, Z))\n",
     "#     E_dot = (n_i * v_beta * (to_erg(E_beta) + m_e_*c_**2)\n",
-    "#              * Z**2 * r_0 _**2 * alpha_ * phirad(E_beta, Z))\n",
+    "#              * Z**2 * r_0_**2 * alpha_ * phirad(E_beta, Z))\n",
     "    return(to_MeV(E_dot))\n",
     "\n",
     "\n",
@@ -513,9 +504,7 @@
   {
    "cell_type": "markdown",
    "id": "fb7f0e22",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Plotting function"
    ]
@@ -524,9 +513,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "1365a0be",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_rates(T, rho, B, Z, Z_charge, A, Brem=[Brem_Barnes], IE=[IE_Barnes]):\n",
@@ -567,14 +554,12 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "0cacf8f3",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "963f7f6531bd4c6dae3461b6165c9e74",
+       "model_id": "7f6daed7fccf4d4a86ef105a5f680012",
        "version_major": 2,
        "version_minor": 0
       },
@@ -607,14 +592,12 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "e53c22bf",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2165ace1fdf245a3b739bc43b1037308",
+       "model_id": "aafa5ec6d1de4704b316b6a2e428bf15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -637,9 +620,7 @@
   {
    "cell_type": "markdown",
    "id": "94243e84",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Parameter exploration\n",
     "\n",
@@ -654,14 +635,12 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "d23eedd5",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc961fb79e364b7aaea6d354cda090ba",
+       "model_id": "50f41049881947a588c627f11e7a870f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -726,9 +705,7 @@
   {
    "cell_type": "markdown",
    "id": "4a68b15d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Now we need to evolve this following Meztger review for temperature and density."
    ]
@@ -736,9 +713,7 @@
   {
    "cell_type": "markdown",
    "id": "5814cf2e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "A: Goes into homologuous expansion: $\\rho \\propto t^{-3}$. Quentin's work suggests that T might be increasing. In some models. T might go up to $10^{5}K$, but probably not above. "
    ]
@@ -746,9 +721,7 @@
   {
    "cell_type": "markdown",
    "id": "835cba68",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "hello"
    ]
@@ -803,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "1165cacb",
    "metadata": {},
    "outputs": [],
@@ -859,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "3bfe05a6",
    "metadata": {},
    "outputs": [
@@ -882,8 +855,8 @@
     "                              options=['Barnes (Corrected)', 'Bethe_SI'],\n",
     "                              value=['Barnes (Corrected)'])\n",
     "\n",
-    "E_beta_eval = widgets.FloatLogSlider(description='E_beta', min=-3, max=3, value=0, step=1)\n",
-    "T = widgets.FloatLogSlider(description='T', min=-10, max=10, value=1.e-6, step=1)\n",
+    "E_beta_eval = widgets.FloatLogSlider(description='E_beta', min=-3, max=5, value=0, step=1)\n",
+    "T = widgets.FloatLogSlider(description='T', min=-10, max=3, value=1.e-6, step=1)\n",
     "rho = widgets.FloatLogSlider(description='rho', min=-18, max=-10, value=1.e-14, step=1)\n",
     "B = widgets.FloatLogSlider(description='B', min=-10, max=5, value=1.e-6, step=1)\n",
     "Z = widgets.Dropdown(description='Z', options=[1,60], value=60)\n",
@@ -893,7 +866,7 @@
     "g.update_layout(\n",
     "    title=\"Dominant process\",\n",
     "    xaxis_title=\"Temperature T(K)\",\n",
-    "    yaxis_title=\"Density rho(kg/m3)\")\n",
+    "    yaxis_title=\"Density rho(g/cm3)\")\n",
     "\n",
     "def update_Z_A(*args):\n",
     "    if Tpe.value == 'Hydrogen':\n",
@@ -912,8 +885,8 @@
     "    if Tpe.value == 'GRB afterglow':\n",
     "        Z.value = 1\n",
     "        A.value = 1\n",
-    "        T.value = 1.e9\n",
-    "        B.value = 1.e3  # in Tesla (1 T = 10^4 G)\n",
+    "        T.value = 1.e3  # max value measured in GAMMA (MeV)\n",
+    "        B.value = 1.e3  # in G\n",
     "Tpe.observe(update_Z_A, 'value')\n",
     "\n",
     "def update(Tpe, T, rho, B, Z, A, Brem, IE):\n",
@@ -977,14 +950,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
+   "id": "58f52dd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51099.27585286005\n"
+     ]
+    }
+   ],
+   "source": [
+    "lfac = 1.e5\n",
+    "elec_energy = (lfac - 1)*m_e_*c_**2\n",
+    "print(to_MeV(elec_energy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "e86cbe9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3354944f60bb4285a994ff3cf7838ed4",
+       "model_id": "0dd32fd1b7a5424e943ba8c9081a3a0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -999,10 +992,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.00000000e+00 1.00000000e+00 1.80972711e-05 2.66115631e-07]\n",
-      "[0.00000000e+00 1.00000000e+00 1.80972711e-05 2.66115631e-07]\n",
-      "[0.00000000e+00 1.00000000e+00 2.28070172e-04 3.26612631e-05]\n",
-      "[0.00000000e+00 1.00000000e+00 4.06029283e-05 1.87404469e-06]\n"
+      "[0.00000000e+00 1.00000000e+00 1.52679642e-02 7.83870314e-23]\n",
+      "[1.49211362e-06 1.55209954e-01 1.00000000e+00 7.19111415e-19]\n",
+      "[3.81011430e-05 1.00000000e+00 6.94298012e-01 6.63964212e-20]\n",
+      "[8.43694185e-05 1.00000000e+00 8.39910007e-02 1.64076167e-21]\n",
+      "[3.81011430e-05 1.00000000e+00 6.94298012e-01 6.63964212e-20]\n",
+      "[8.43694185e-05 1.00000000e+00 8.39910007e-02 1.64076167e-21]\n",
+      "[0.00000000e+00 1.00000000e+00 1.52679642e-02 7.83870314e-23]\n",
+      "[0.00000000e+00 1.00000000e+00 1.82144827e-03 4.49770726e-24]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-25]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-17]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-11]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-23]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-17]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-13]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-05]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-07]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-11]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-15]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-11]\n",
+      "[0.00000000e+00 1.00000000e+00 2.19628072e-04 6.38677515e-09]\n",
+      "[0.00000000e+00 1.00000000e+00 1.82144827e-03 4.49770726e-08]\n",
+      "[0.00000000e+00 1.00000000e+00 1.52679642e-02 7.83870314e-07]\n",
+      "[8.43694185e-05 1.00000000e+00 8.39910007e-02 1.64076167e-05]\n",
+      "[0.00000000e+00 1.00000000e+00 1.52679642e-02 7.83870314e-07]\n"
      ]
     }
    ],
